Add target telflex radio carrier board with pre-conf-gpio-out - use dynamic env to init mode gpio - use early init gpio mcu boot/configuration

--- a/board/variscite/common/Makefile
+++ b/board/variscite/common/Makefile
@@ -5,3 +5,4 @@
 
 obj-$(CONFIG_TARGET_VARISCITE_DART6UL_EVK) += eeprom.o
 obj-$(CONFIG_TARGET_VARISCITE_DART6UL_IDE) += eeprom.o
+obj-$(CONFIG_TARGET_VARISCITE_DART6UL_TELFLEX) += eeprom.o
