--- a/arch/arm/mach-imx/mx6/Kconfig
+++ b/arch/arm/mach-imx/mx6/Kconfig
@@ -201,6 +201,15 @@ config TARGET_VARISCITE_DART6UL_IDE
 	select SUPPORT_SPL
 	select BOARD_EARLY_INIT_F
 
+config TARGET_VARISCITE_DART6UL_TELFLEX
+	bool "TELFLEX carrier board based on DART-6UL"
+	select BOARD_LATE_INIT
+	select MX6ULL
+	select DM
+	select DM_THERMAL
+	select SUPPORT_SPL
+	select BOARD_EARLY_INIT_F
+
 config TARGET_GE_BX50V3
 	bool "General Electric Bx50v3"
 	select BOARD_LATE_INIT
