--- a/board/variscite/dart6ul/Kconfig
+++ b/board/variscite/dart6ul/Kconfig
@@ -1,4 +1,4 @@
-if TARGET_VARISCITE_DART6UL_EVK || TARGET_VARISCITE_DART6UL_IDE
+if TARGET_VARISCITE_DART6UL_EVK || TARGET_VARISCITE_DART6UL_IDE || TARGET_VARISCITE_DART6UL_TELFLEX
 
 config SYS_BOARD
 	default "dart6ul"
