--- a/configs/variscite_dart6ulide_emmc_defconfig
+++ b/configs/variscite_dart6ulide_emmc_defconfig
@@ -22,6 +22,7 @@ CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_MMC=y
+CONFIG_CMD_GPT=y
 CONFIG_CMD_USB=y
 CONFIG_CMD_CACHE=y
 CONFIG_CMD_FAT=y
@@ -42,3 +43,4 @@ CONFIG_FSL_ESDHC=y
 CONFIG_BOOTCOUNT_LIMIT=y
 CONFIG_BOOTCOUNT_I2C=y
 CONFIG_SYS_BOOTCOUNT_ADDR=0x20
+CONFIG_EFI_PARTITION=y
